--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
 
   <!-- Main App JS -->
   <script src="app.js"></script>
-  <script src="directive/error-message.js"></script>
   <script src="directive/error-message/error-message.js"></script>
   <script src="directive/alphabet-only/alphabet-only.js"></script>
   <script src="directive/max-value/max-value.js"></script>
   <script src="directive/min-value/min-value.js"></script>
   <script src="directive/number-only/number-only.js"></script>
+  <script src="directive/email-validator/email-validator.js"></script>
+  <script src="service/util-factory/util-factory.js"></script>
   <!-- Add New Component JS Above -->
 
   <div>
